# voxaboxen

./: pyproject.toml  setup.py
voxaboxen/model/: model.py
voxaboxen/training/: train.py
