[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voxaboxen"
version = "0.1.0"
description = "Bioacoustics event detection deep learning framework. Supports training and evaluation using Raven annotations and simple config files. For training, please directly clone the github repository."
readme = "README.md"
authors = [
    {name = "Benjamin Hoffman, Maddie Cusimano", email = "benjamin@earthspecies.org"},
]
license = {text = "GNU Affero General Public License v3.0"}
requires-python = ">=3.8.0"
classifiers = [
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
]
dependencies = [
    "pandas>=2.0.2",
    "librosa>=0.10.0",
    "soundfile>=0.12.1",
    "tqdm>=4.65.0",
    "numpy>=1.24.3",
    "plumbum>=1.8.2",
    "PyYAML>=6.0",
    "intervaltree>=3.1.0",
    "torch>=2.0.1",
    "torchaudio>=2.0.1",
    "einops>=0.6.1",
    "scipy>=1.10.1",
    "matplotlib>=3.7.1",
    "seaborn>=0.12.2",
    "mir_eval>=0.7",
    "torchvision>=0.15.2"
]

[project.urls]
Homepage = "https://github.com/earthspecies/voxaboxen"

[tool.hatch.build.targets.wheel]
packages = ["voxaboxen"] 